--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Prefect</title>
   </head>
 
   <body>
     <header>
       <nav class="uk-navbar-container" uk-navbar>
         <div class="uk-navbar-left">
-          <a href="/" class="uk-navbar-item uk-logo">Gopref</a>
+          <a href="/" class="uk-navbar-item uk-logo">Prefect</a>
           <ul class="uk-navbar-nav">
             <li><a href="#" class="disabled"></a></li>
           </ul>
