--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,12 @@
     <header>
       <nav class="uk-navbar-container" uk-navbar>
         <div class="uk-navbar-left">
-          <a href="/" class="uk-navbar-item uk-logo">Prefect</a>
-          <ul class="uk-navbar-nav">
-            <li><a href="#" class="disabled"></a></li>
-          </ul>
+          <div style="max-width: 1200px; margin-left: auto; margin-right: auto;">
+            <a href="/" class="uk-navbar-item uk-logo">Prefect</a>
+            <ul class="uk-navbar-nav">
+              <li><a href="#" class="disabled">gopref 0.1.0</a></li>
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
